src/objects/SAE_Reason_Codes__mdt.object
<CustomObject>
    <description>Stores contact reason, category codes, and issue values</description>
    <fields>
        <fullName>Category_API__c</fullName>
        <description>Used to store the API value for Category</description>
        <label>Category API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Used to store the UI value for Category</description>
        <label>Category UI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_API__c</fullName>
        <description>Used to store the API value of Reason</description>
        <label>Reason API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Used to store the UI value for Reason</description>
        <label>Reason UI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SAE Reason/Code</label>
    <listViews>
        <fullName>SAE</fullName>
        <columns>MasterLabel</columns>
        <columns>Topic__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>Issue__c</columns>
        <columns>Category__c</columns>
        <columns>Reason__c</columns>
        <columns>Category_API__c</columns>
        <columns>Reason_API__c</columns>
        <filterScope>Everything</filterScope>
        <label>SAE</label>
    </listViews>
    <pluralLabel>SAE Reason/Codes</pluralLabel>
</CustomObject>